--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Scrabble Game</h1>
+        <h1>Scrabble Game - HW5</h1>
+        <p class="author">Kaden Gardiner</p>
 
         <div class="game-info">
             <div class="score-display">
-                <h2>Current Word Score: <span id="current-score">0</span></h2>
-                <h2>Total Score: <span id="total-score">0</span></h2>
-                <h3>Tiles Remaining: <span id="tiles-remaining">100</span></h3>
+                <span class="score-item">Current Word Score: <strong id="current-score">0</strong></span>
+                <span class="score-item">Total Score: <strong id="total-score">0</strong></span>
+                <span class="score-item">Tiles Remaining: <strong id="tiles-remaining">100</strong></span>
             </div>
         </div>
 
@@ -54,7 +55,6 @@
         <div class="controls">
             <button id="submit-word">Submit Word</button>
             <button id="clear-board">Clear Board</button>
-            <button id="new-tiles">New Tiles</button>
             <button id="restart-game">Restart Game</button>
         </div>
 
